--- a/src/styles.css
+++ b/src/styles.css
@@ -9,14 +9,15 @@ h2 {
 }
 
 h1 {
-  font-size: 40px;
+  font-size: 15px;
   display: block;
   text-align: left;
   margin: 0 auto;
+  padding: 20px 0 0;
 }
 
 h2 {
-  font-size: 20px;
+  font-size: 15px;
   display: block;
   text-align: left;
   padding: 5px;
@@ -36,7 +37,7 @@ li {
   padding: 4px;
 }
 
-.container {
+.weather-app-wrapper {
   color: #3a4870;
   background-image: linear-gradient(
     to top,
@@ -44,12 +45,11 @@ li {
     #e3eeff 99%,
     #e3eeff 100%
   );
-  margin: 0 auto;
-  display: block;
-  padding: 20px;
+  max-width: 600px;
+  margin: 30px auto;
   border: 10px solid #fdfbfb;
-  border-radius: 10px;
-  width: 600px;
+  border-radius: 20px;
+  padding: 30px;
 }
 
 .row {
@@ -64,12 +64,6 @@ li {
   color: #3a4870;
   font-size: 12px;
   padding-left: 5px;
-}
-
-.temperature-forecast {
-  font-size: 12px;
-  padding: 5px;
-  margin: 0 auto;
 }
 
 .temperature {
@@ -89,11 +83,6 @@ li {
   margin: 0 auto;
 }
 
-.miniicon {
-  font-size: 20px;
-  color: #3a4870;
-}
-
 .button {
   border-radius: 5px;
   border: 1px solid #3a4870;
@@ -103,6 +92,15 @@ li {
   background-color: #3a4870;
 }
 
+.button:hover {
+  border-radius: 5px;
+  border: 1px solid #f2e7e9;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  color: #3a4870;
+  background-color: #f2e7e9;
+}
+
 .button-location {
   border-radius: 5px;
   border: 1px solid #3a4870;
@@ -110,6 +108,15 @@ li {
   font-size: 12px;
   color: #f2e7e9;
   background-color: #3a4870;
+}
+
+.button-location:hover {
+  border-radius: 5px;
+  border: 1px solid #f2e7e9;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  color: #3a4870;
+  background-color: #f2e7e9;
 }
 
 .active {
